--- a/style.css
+++ b/style.css
@@ -154,7 +154,27 @@ p {
     background: #88ba1c;  
 }
 
-/* canvas{
-    background : black;
+@media screen and (max-width: 400px) {
+    h1 {
+        width: 100%; 
+        font-size: 2.5rem;
+    }
+    #next-btn, #back-btn {
+        padding: 9px 17px;
+        font-size: 1.7rem;
+    }
+    #transcription-box {
+        width: 350px;
+    }
+}
 
-}  */
+@media screen and (max-width: 330px) {
+    #next-btn, #back-btn {
+        padding: 7px 17px;
+        font-size: 1.5rem;
+        margin: .5rem;
+    }
+    #transcription-box {
+        width: 300px;
+    }
+}
