cleaned up story pages and models

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ p {
     font-size: 1.5rem;
     margin-bottom: 2rem;
     color: black;
+    width: 410px;
 }
 
 #next-btn, #back-btn {
@@ -127,23 +128,9 @@ p {
     100% { background-position: 0 0; }
 }
 
-#transcription-box {
+#transcription-box, #accessability-box {
     height: 200px;
-    width: 400px;
-    overflow: auto;
-    background-color: white;
-    color: black;
-    /* scrollbar-base-color:gold; */
-    font-family:sans-serif;
-    padding:10px;
-    border:2px solid yellowgreen;
-    font-family: 'Annie Use Your Telescope';
-    font-size: 30px;
-}
-
-#accessability-box {
-    height: 100px;
-    width: 400px;
+    width: 410px;
     overflow: auto;
     background-color: white;
     color: black;
@@ -175,7 +162,7 @@ p {
     background: #88ba1c;  
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 410px) {
     h1 {
         width: 100%; 
         font-size: 2.5rem;
@@ -184,7 +171,7 @@ p {
         padding: 9px 17px;
         font-size: 1.7rem;
     }
-    #transcription-box {
+    #transcription-box, #accessability-box {
         width: 350px;
     }
 }
@@ -195,7 +182,7 @@ p {
         font-size: 1.5rem;
         margin: .5rem;
     }
-    #transcription-box {
+    #transcription-box, accessability-box {
         width: 300px;
     }
 }
