--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ p {
     background: #88ba1c;  
 }
 
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 650) {
     h1 {
         width: 100%; 
         font-size: 2.5rem;
