--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p {
     font-size: 1.5rem;
     margin-bottom: 2rem;
     color: black;
-    width: 410px;
+    /* width: 410px; */
 }
 
 #next-btn, #back-btn {
@@ -176,6 +176,12 @@ p {
     }
 }
 
+@media screen and (max-width: 430px) {
+    p {
+        font-size: 1.3rem;
+    }
+}
+
 @media screen and (max-width: 370px) {
     #next-btn, #back-btn {
         padding: 7px 17px;
@@ -184,6 +190,15 @@ p {
     }
     #transcription-box, accessability-box {
         width: 300px;
+    }
+    p {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 270px) {
+    h1 {
+        font-size: 2.3rem;
     }
 }
 
