--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ p {
     background: #88ba1c;  
 }
 
-@media screen and (max-width: 650) {
+@media screen and (max-width: 430px) {
     h1 {
         width: 100%; 
         font-size: 2.5rem;
@@ -171,16 +171,22 @@ p {
         padding: 9px 17px;
         font-size: 1.7rem;
     }
-    #transcription-box, #accessability-box {
-        width: 350px;
-    }
-}
-
-@media screen and (max-width: 430px) {
     p {
         font-size: 1.3rem;
     }
+    #transcription-box, #accessability-box {
+        width: 390px;
+    }
 }
+
+/* @media screen and (max-width: 430px) {
+    p {
+        font-size: 1.3rem;
+    }
+    #transcription-box, #accessability-box {
+        width: 400px;
+    }
+} */
 
 @media screen and (max-width: 370px) {
     #next-btn, #back-btn {
@@ -188,7 +194,7 @@ p {
         font-size: 1.5rem;
         margin: .5rem;
     }
-    #transcription-box, accessability-box {
+    #transcription-box, #accessability-box {
         width: 300px;
     }
     p {
